--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -19,7 +19,7 @@ body {
   margin: 0;
   overflow-x: hidden;
   font-family: "Arial", sans-serif;
-  background-color: #fff;
+  background-color: #111;
 }
 
 img {
