--- a/scss/blocks/_weather.scss
+++ b/scss/blocks/_weather.scss
@@ -75,7 +75,6 @@ h1, h3 {
   background: rgba(110,110,110,0.25);
   box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
   backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255,255,255,0.18);
   z-index: 1;
   padding: 3em 2em;
@@ -158,7 +157,7 @@ h1, h3 {
 .weather__buttons {
   position: relative;
   top: 180px;
-  left: -75px;
+  left: 0px;
 }
 
 .weather__btn {
@@ -260,6 +259,20 @@ h1, h3 {
 
 
 
+@media screen and (max-width: 1200px) {
+
+  .container {
+    position: relative;
+    width: 100%;
+    top: -600px;
+    left: 0 !important;
+  }
+  .panel {
+    position: relative;
+    width: 100%;
+    top: -600px;
+  }
+}
 
 
 
